--- a/templates/style.css
+++ b/templates/style.css
@@ -2,8 +2,9 @@
 
 /* Jumbotron */
 .team-heading {
-  /* background-image: url(https://images.unsplash.com/photo-1494059980473-813e73ee784b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1949&q=80); */
+  background-image: url(https://images.unsplash.com/photo-1464802686167-b939a6910659?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1333&q=80);
   background-color: turquoise;
   color: coral;
+  border-bottom: 3px, solid, coral;
 
 }
