--- a/output/style.css
+++ b/output/style.css
@@ -2,8 +2,10 @@
 
 /* Jumbotron */
 .team-heading {
-  background-image: url(https://images.unsplash.com/photo-1585366119957-e9730b6d0f60?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80);
+  background-image: url(https://images.unsplash.com/reserve/d1Ntvq9mSVmV0RcnWN1Y_23rd%20Studios%20Photography%20Boulder%20Colorado.jpg?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80);
   background-color: turquoise;
   color: white;
   border-bottom: 3px, solid, coral;
 }
+
+/* Cards */
