--- a/output/style.css
+++ b/output/style.css
@@ -4,9 +4,11 @@ body {
 }
 /* Jumbotron */
 .team-heading {
-  background-color: #0fa3b1;
+  /* background-color: #0fa3b1; */
+  /* background-color: #75dddd; */
+  background-color: #0f12b1;
   color: #ffffff;
-  border-bottom: 4px solid #75dddd;
+  border-bottom: 6px solid #75dddd;
 }
 
 .team-area {
@@ -19,16 +21,17 @@ body {
   box-shadow: 0 40px 60px 0 rgba(15, 15, 15, 0.4);
 }
 .card-header {
-  background-color: #0fa3b1;
+  background-color: #0f12b1;
   color: #ffffff;
-  border-bottom: 2px solid #75dddd;
+  border-bottom: 3px solid #aa3e98;
 }
 
 .card-body {
   background-color: #babebe41;
 }
 .fas {
-  color: #aa3e98;
+  /* color: #aa3e98; */
+  color: #75dddd;
 }
 
 li {
