--- a/output/style.css
+++ b/output/style.css
@@ -1,6 +1,8 @@
 /* main.html stylings */
 body {
   background-color: #ffffff;
+  background-image: url(https://images.unsplash.com/photo-1529307482987-d09357b12fb3?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1051&q=80);
+  background-size: cover;
 }
 /* Jumbotron */
 .team-heading {
